# selfletter

./: .env.example  .gitignore  README.md  combiner.py  idea.md  main.py  prompt.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
examples/: daily-newsletter.md
processors/: __init__.py  article.py  arxiv.py  base.py  huggingface.py  youtube.py
src/selfletter/: __init__.py  cli.py  combiner.py  prompts.py
src/selfletter/processors/: __init__.py  article.py  arxiv.py  base.py  huggingface.py  youtube.py
src/selfletter/utils/: email.py  notion.py
