[project]
name = "selfletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "dotenv==0.9.9",
    "lxml>=4.9.4,<5.2.0",
    "markdown==3.7",
    "notion-client==2.2.1",
    "pytest==8.3.4",
    "requests==2.32.3",
    "trafilatura==1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
